# cse-projects

./: CMakeLists.txt  README.md
algo c-files/: input.text  input.txt  mergeSort.c
c-files/: 12 excercise of function  51 to 150  ARRAY 2024  ArgumenNOreturn  FUNCTION  2024  GCD  anika-demo.c  area calcukation in function  argument,return  array part 1  binary scearch  circle area perimeter  data structure  lect 1  exp of basic array  factorial  function basic  inverse triangle pattern  lab task  lab task practice  lab task practice 2  lab task report 3  leapyear  maximum of three numbers  n sum function  no return ,no argument  noArgument Return  p-1  p-2  p-3  p-4  p-5  pattern basic  perfect num function  perfect number  power  prime  prime function  prime range function  row column  s,f,a 2024   (+7 more)
c-files/LinkedList/: Add_at_beg  Create_Node  Traverse_countNode  add at pos  insertNode_at_end
c-files/LinkedList(single)/: Add_at_beg  add at pos  delete_head_end_Middle  insertNode_at_end
c-files/Search in c(ARRAY)/: Linear_search  binart_search
c-files/Stack/: pop_push_peek
java-files/: oop(class)  ooplab_1
java-files/BankAccount_project/: BankAccount.java  Main.java
