cmake_minimum_required(VERSION 3.27)
project(cse_projects)

set(CMAKE_CXX_STANDARD 14)

add_executable(cse_projects
        "c-files/51 to 150"
        c-files/anika-demo.c
        "c-files/area calcukation in function"
        "c-files/argument,no return"
        c-files/argument,return
        "c-files/circle area perimeter"
        "c-files/exp of basic array"
        c-files/factorial
        c-files/GCD
        "c-files/inverse triangle pattern"
        c-files/leapyear
        "c-files/maximum of three numbers"
        "c-files/n sum function"
        "c-files/no argument,return"
        "c-files/no return ,no argument"
        c-files/p-1
        c-files/p-2
        c-files/p-3
        c-files/p-4
        c-files/p-5
        "c-files/pattern basic"
        "c-files/perfect num function"
        "c-files/perfect number"
        c-files/power
        c-files/prime
        "c-files/prime function"
        "c-files/prime range function"
        "c-files/row column"
        "c-files/structure basic"
        "c-files/sum of n digits"
        c-files/swap
        "c-files/temp convertion"
        "c-files/triangle pattern")
